# blackout

./: README.md  package-lock.json  package.json
.github/workflows/: static-deployment.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/assets/: logo.ai
